--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<nav>
+    <a routerLink="/employee-entry">Add Employee</a> |
+    <a routerLink="/employee-list">Employee List</a>
+  </nav>
+  <router-outlet></router-outlet>
+  
